--- a/wetnoose-home.html
+++ b/wetnoose-home.html
@@ -28,7 +28,7 @@
         Wetnoose's World is a deep database on all things Wetnoose! This is one of the most engrossing characters in all of the Sonic Unvierse which is why you should know everything about him!<br>
         <br>
     <h2>INDEX:</h2>
-<a href="wetnoose-the-hedgehog.html"><img src="file:///C:/Users/clay.dubois/Desktop/practice-website/bio.png" alt="Wetnoose's Biography" ></a>
+<a href="wetnoose-the-hedgehog.html"><img src="bio.png" alt="Wetnoose's Biography" ></a>
 <a href="wetnoose-contact-info.html"><img src="contact.png" alt="Contact Wetnoose Here!!!" ></a>
 <a href="wetnoose-fan-club.html"><img src="fan.png" alt="Wetnoose Fan Club" ></a>
         
